For the latest news, visit the SparForte web site.

Objective: Error message improvements

CHANGES SINCE 2.6

1. Fix: --without-sound now builds successfully.

2. Fix: --without-readline now builds successfully.


CHANGES SINCE 2.6.1

3. Change: more error messages updated to new format.

4. Fix: additional error checks for JSON encoding/decoding.

5. Fix: whitespace handling for JSON encoding/decoding.

6. Fix: boolean values now shown in env command.

7. Fix: an error is reported when bubble or heap sorting arrays containing undefined numeric or enumerated values, instead of raising an exception.

8. Fix: type checking on out mode parameters.

9. Fix: trailing whitespace in a prompt script shows an appropriate message instead of "statement expected".

10. New: New style error messages may include the location where an identifier was declared.

11. Change: configure will try to use find /usr/lib if locate command is not installed [untested].

12. Change: very long identifier names will be replaced with the text "the identifier" in new style error messages.

13. Change: when using cd on a path to a non-directory, cd will attempt to change directory to the directory containing the file with an "Assuming" warning.  In a script, this is a suggested remedy.

14. Change: when using cd with a path with leading/trailing spaces, cd will attempt to change directory to the directory without spaces with an "Assuming" warning.  In a script, this is a suggested remedy.

15. Change; when using cd with the wrong slash delimiter, cd will attempt to use the correct directory delimiter with an "Assuming" warning.  In a script, this is a suggested remedy.

16. Change: umask will correct suspicious values, at the command prompt only.

